# template-opencv

./: CMakeLists.txt  README.md  main.cpp
